home page served

--- a/template/page.mustache
+++ b/template/page.mustache
@@ -2,25 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>{{title}}</title>
+  <title>{{page_title}}</title>
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <link rel="stylesheet" href="css/reset.css" />  
   <link rel="stylesheet" href="css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Actor' rel='stylesheet' type='text/css'>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/engine.js"></script>
-
 </head>
 <body>
   <header>
-    <h1>{{page_title}}</h1>
+    <h1>{{title}}</h1>
     <nav>{{#nav}}
       <a href="#" rel="{{.}}">{{.}}</a>{{/nav}}
     </nav>
   </header>
-  <div id="content">{{content}}
+  <div id="content">
+    {{{content}}}
   </div>
-  <footer><span class="heart">&hearts;</span>graphiteCMS &copy; 2012</footer>
+  <footer><span class="heart">&hearts;</span> graphiteCMS &copy; 2012</footer>
   </body>
 </html>
