--- a/template/page.mustache
+++ b/template/page.mustache
@@ -13,9 +13,8 @@
 <body>
   <header>
     <h1>{{title}}</h1>
-    <nav>{{#nav}}
-      <a href="#" rel="{{.}}">{{.}}</a>{{/nav}}
-    </nav>
+    <nav>
+{{{nav}}}    </nav>
   </header>
   <div id="content">
     {{{content}}}
