--- a/template/page.mustache
+++ b/template/page.mustache
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>{{page_title}}</title>
+  <title>{{page_title}} - {{post_title}}</title>
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <link rel="stylesheet" href="css/reset.css" />  
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="{{base}}/css/reset.css" />  
+  <link rel="stylesheet" href="{{base}}/css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Actor' rel='stylesheet' type='text/css'>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/engine.js"></script>
+  <script type="text/javascript" src="{{base}}/js/engine.js"></script>
 </head>
 <body>
   <header>
-    <h1>{{title}}</h1>
+    <h1>{{page_title}}</h1>
     <nav>
 {{{nav}}}    </nav>
   </header>
