--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,9 @@ nav { height:2em; }
 nav ul { list-style:none; padding:0; }
 nav ul li { float: left; font-weight:bold; border-right: 1px dotted #B8976E; box-shadow: 1px 0 0 #fff;padding: 0 1em 0 0; margin:0 1em 0 0; }
 nav ul li:last-child { border: none; box-shadow: none; }
-#content { width: 800px; border-bottom:1px dotted #B8976E; padding: 0 0 0.5em 0; box-shadow: 0 1px 0 #fff; }
+nav ul li ul { display:none; }
+nav ul li ul li {float:none; border:none;box-shadow:none; margin:1em 0 0 0;}
+#content { width: 800px; min-height:400px; border-bottom:1px dotted #B8976E; padding: 0 0 0.5em 0; box-shadow: 0 1px 0 #fff; }
 #content h2 { font-size:1.4em; }
 #content h3 { font-size:1.3em; }
 #content p  { font-size:1em; margin: 0 0 1em 0; }
