--- a/template/page.mustache
+++ b/template/page.mustache
@@ -14,7 +14,14 @@
   <header>
     <h1>{{page_title}}</h1>
     <nav>
-{{{nav}}}    </nav>
+	{{#nav}}
+		{{#foo}}
+			{{#bar}}
+				{{baz}}
+			{{/bar}}
+		{{/foo}}
+	{{/nav}}
+    </nav>
   </header>
   <div id="content">
     {{{content}}}
