--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,27 @@
 	`---'                                   `---'
 
 */
-body { margin:50px; font-family: 'Actor', sans-serif; font-size:13px; color:#3B3935; background:#FAF1D7;}
-h1, h2, h3, h4, h5, h6 { text-transform: uppercase; color:#FF893B; text-shadow: 1px 1px 1px #5E5B51; margin:0 0 1em 0; }
+body { margin:50px; font-family: 'Actor', sans-serif; font-size:0.95em; color:#3b3935; background:#FAF1D7; line-height: 1.1em;}
+h1, h2, h3, h4, h5, h6 { text-transform: uppercase; color:#ff893b; text-shadow: 1px 1px 1px #5E5B51; margin:0 0 1em 0; }
+a { color:#ff893b; }
 header { width: 800px; border-bottom:1px dotted #B8976E; padding: 0 0 0.5em 0; margin:0 0 1em 0; box-shadow: 0 1px 0 #fff;}
 h1 { font-size:1.5em; }
-nav { /*height:2em;*/ float:left; font-size:0.9em; margin:0 1em 0 0; height:100%; }
+h1 a { text-decoration:none; color: #ff893b; }
+nav { /*height:2em;*/ float:left; font-size:0.9em; margin:0 1em 0 0; width:150px; height:100%; }
 nav ul { list-style:none; padding:0; }
-nav ul li { }
+nav ul li.active { font-weight:bold; }
 nav ul li:last-child { border: none; box-shadow: none; }
-nav ul li ul { }
-nav ul li ul li {float:none; border:none;box-shadow:none; margin:0 0 0 1em;}
+nav ul li ul { display:none; }
+nav ul li span.section-title { cursor:pointer; }
+nav ul li ul li {font-weight:normal; float:none; border:none;box-shadow:none; margin:0 0 0 1em;}
+nav ul li ul li.active { font-weight:bold; }
 nav ul a { text-decoration:none; color:#3B3935;}
 #content { width: 800px; min-height:400px; border-bottom:1px dotted #B8976E; padding: 0 0 0.5em 0; box-shadow: 0 1px 0 #fff; }
 #content h2 { font-size:1.4em; }
 #content h3 { font-size:1.3em; }
 #content p  { font-size:1em; margin: 0 0 1em 0; }
 #content ul { margin:0 0 1em 0; }
+#content img { margin: 0 1em 1em 0; }
 footer { width: 800px; font-size:0.9em; margin:1em 0 0 0; text-align:right; }
 footer span.heart { font-size:0.6em; background-color:#3B3935;/*e11*/ -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color:#FAF1D7; padding:4px 3px 2px 3px;}
 ul { list-style: disc; padding:0 0 0 16px;}
