--- a/template/page.mustache
+++ b/template/page.mustache
@@ -9,22 +9,23 @@
   <link href='http://fonts.googleapis.com/css?family=Actor' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
   <script type="text/javascript" src="{{base}}/js/engine.js"></script>
+  {{headLinks}}
 </head>
 <body>
   <header>
-    <h1>{{page_title}}</h1>
+    <h1><a href="{{base}}/">{{page_title}}</a></h1>
   </header>
   <nav>{{#nav}}
     <ul>{{#items}}{{#item}}
-      <li>{{#link}}<a href="{{base}}/{{link}}">{{title}}</a>{{/link}}{{^link}}<span class="section-title">{{title}}</span>{{/link}}{{#hasChildren}}
+      <li{{#class}} class="{{class}}"{{/class}}>{{#link}}<a href="{{link}}">{{title}}</a>{{/link}}{{^link}}<span class="section-title">{{title}}</span>{{/link}}{{#hasChildren}}
         <ul>{{#children}}{{#item}}
-          <li>{{#item.link}}<a href="{{base}}/{{item.link}}">{{item.title}}</a>{{/item.link}}{{^item.link}}{{item.title}}{{/item.link}}</li>{{/item}}{{/children}}
+          <li{{#item.class}} class="{{item.class}}"{{/item.class}}>{{#item.link}}<a href="{{item.link}}">{{item.title}}</a>{{/item.link}}{{^item.link}}{{item.title}}{{/item.link}}</li>{{/item}}{{/children}}
         </ul>{{/hasChildren}}</li>{{/item}}{{/items}}
     </ul>{{/nav}}
   </nav>
   <div id="content">
     {{{content}}}
   </div>
-  <footer><span class="heart">&hearts;</span> graphiteCMS &copy; 2012</footer>
+  <footer><span class="heart">&hearts;</span> graphite &copy; 2012</footer>
   </body>
 </html>
