--- a/template/page.mustache
+++ b/template/page.mustache
@@ -8,13 +8,11 @@
   <link rel="stylesheet" href="{{base}}/css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Actor' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-  <script type="text/javascript" src="{{base}}/js/engine.js"></script>
-  {{headLinks}}
+  <script type="text/javascript" src="{{base}}/js/points.json"></script>
+  <script type="text/javascript" src="{{base}}/js/engine.js"></script>{{!headLinks}}
 </head>
 <body>
-  <header>
-    <h1><a href="{{base}}/">{{page_title}}</a></h1>
-  </header>
+  <header><a href="{{base}}"><canvas id="canvas" width="210" height="105"></canvas></a></header>
   <nav>{{#nav}}
     <ul>{{#items}}{{#item}}
       <li{{#class}} class="{{class}}"{{/class}}>{{#link}}<a href="{{link}}">{{title}}</a>{{/link}}{{^link}}<span class="section-title">{{title}}</span>{{/link}}{{#hasChildren}}
